--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <button id="play-paper">Papier</button>
       <button id="play-scissors">Nożyce</button>
       <div id="messages"></div>
+      <div id="result"></div>
     </div>
     <script src="js/functions.js"></script>
     <script src="js/script.js"></script>
